# ble-broadcast-authorization

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3  sdkconfig.old
ble-broadcast-authentication-receiver/components/ble_gap/: CMakeLists.txt  ble_common.h  ble_gap.c  ble_gap.h  ble_receiver.c  ble_sender.c
ble-broadcast-authentication-sender/: CMakeLists.txt  sdkconfig
ble-broadcast-authentication/components/ble_receiver/: CMakeLists.txt  ble_receiver.c  dispatcher.c  dispatcher.h  key_cache.c  key_cache.h  key_management.c  key_reconstructor.c  key_reconstructor.h  pdu_decryptor.h  sec_pdu_processing.c  sec_pdu_processing.h
ble-broadcast-authentication/components/ble_receiver/key_reconstruction/: key_reconstructor.c
ble-broadcast-authentication/components/ble_sender/: CMakeLists.txt  ble_broadcast.c  ble_broadcast.h  ble_msg_encryptor.c  ble_sender.c  ble_sender.h  ble_sender_msg_encryptor.c  ble_sender_msg_encryptor.h
components/beacon_pdu/: beacon_marker.h  (+2 more)
components/ble_broadcast_security_processing_engine/: CMakeLists.txt
components/ble_broadcast_security_processing_engine/include/: sec_payload_decrypted_observer.h  sec_pdu_processing.h  sec_pdu_processing_scan_callback.h
components/ble_broadcast_security_processing_engine/internal/: sec_payload_observer_collection.h  sec_pdu_process_queue.h
components/ble_broadcast_security_processing_engine/internal/adv_time_authorize/: adv_time_authorize.h
components/ble_broadcast_security_processing_engine/internal/ble_consumer/: ble_consumer.h  ble_consumer_collection.h
components/ble_broadcast_security_processing_engine/internal/key_cache/: key_cache.h
components/ble_broadcast_security_processing_engine/internal/key_reconstruction/: key_management.h  key_reconstructor.h
components/ble_broadcast_security_processing_engine/src/: sec_pdu_processing.c
components/ble_broadcast_security_processing_engine/src/adv_time_authorize/: adv_time_authorize.c
components/ble_broadcast_security_processing_engine/src/ble_consumer/: ble_consumer.c  ble_consumer_collection.c
components/ble_broadcast_security_processing_engine/src/key_cache/: key_cache.c
components/ble_broadcast_security_processing_engine/src/key_reconstruction/: key_reconstructor.c
components/ble_receiver/: CMakeLists.txt  ble_receiver.c  ble_receiver.h  dispatcher.c  dispatcher.h  key_cache.c  key_cache.h  sec_payload_observer_collection.c  sec_pdu_processing.c  sec_pdu_processing.h
components/ble_receiver/ble_consumer/: ble_consumer.c  ble_consumer.h  ble_consumer_collection.c  ble_consumer_collection.h
components/ble_receiver/ble_gap_payload_consuming/: ble_gap_payload_consuming.c  ble_gap_payload_consuming.h
components/ble_receiver/ble_sec_payload_consumer/: ble_sec_payload_consumer.c  ble_sec_payload_consumer.h
components/ble_receiver/key_cache/: key_cache.c  key_cache.h
components/ble_receiver/key_reconstruction/: key_management.c  key_management.h  key_reconstructor.c  key_reconstructor.h
components/ble_receiver/utilities/: tick_count_timestamp.h
components/core/: CMakeLists.txt
components/core/include/beacon_pdu/: beacon_crypto_data.h  beacon_key_data.h  beacon_marker.h  beacon_pdu_data.h  beacon_pdu_helpers.h  beacon_pdu_key_reconstruction.h  beacon_test_pdu.h
components/core/include/ble_pdu_counter/: ble_pdu_counter.h
components/core/include/config/: config.h
components/core/include/crypto/: crypto.h
components/core/src/beacon_pdu/: beacon_pdu_data.c  beacon_pdu_helpers.c  beacon_test_pdu.c
components/core/src/ble_common/: ble_common.c
components/core/src/ble_pdu_counter/: ble_pdu_counter.c
components/core/src/ble_send_pdu_counter/: ble_send_pdu_counter.c
components/core/src/crypto/: crypto.c
docs/: ReceiverComponentDiagram.plantuml  baza_danych_aktywnych_nadawców.plantuml  improved_algorith_flow_diagram.plantuml  improved_algorithm_timing_diagram.plantuml  receiver_activity_diagram.plantuml  receiver_component_diag.plantuml  receiver_component_diag2.plantuml  sender_activity_diagram.plantuml  sender_component_diag.plantuml  sender_component_diag_2.plantuml  test_procedure.plantuml  test_procedure_2_senders.plantuml
main/: main.c
projects/: CMakeLists.txt  Kconfig.projbuild
projects/receiver_app/: CMakeLists.txt  ble_gap_payload_consuming.c  ble_gap_payload_consuming.h  receiver_main.c  receiver_serial_communication.c  receiver_serial_communication.h
projects/sender_app/: CMakeLists.txt  ble_broadcast.c  ble_broadcast.h  ble_sender_main.c  sender_main.c
projects/sender_app_2nd/: sender_main.c
python_scripts/: test_app_receiver.py  test_app_requirements.txt  test_app_sender.py  test_receiver_20250112_202926.csv  test_receiver_20250117_190928_16bytes_50ms.txt  test_receiver_20250117_192309_16bytes_300ms.txt  test_receiver_20250117_205847_4bytes_500ms.txt  test_receiver_20250118_141240_10_bytes_50ms.txt  test_receiver_20250118_142450_4_bytes_50ms.txt  test_receiver_20250118_143105_4_bytes_100ms.txt  test_receiver_20250118_151439_16_bytes_300ms.txt  test_receiver_20250122_170505_10_bytes_multiple_senders_500ms.txt  test_receiver_algorithm_v2_20250207_173948_10_bytes_based_on_key_idms.txt  test_receiver_algorithm_v2_20250207_174516_10_bytes_based_on_key_idms.txt  test_receiver_algorithm_v2_20250207_204943_10_bytes_based_on_key_idms.txt  test_receiver_algorithm_v2_20250207_213341_10_bytes_based_on_key_idms.txt  test_receiver_algorithm_v2_20250208_114232_03_15_10_bytes_based_on_key_id_3000_5000ms.txt  test_sender_20250112_202931.csv  test_sender_20250117_190932_16bytes_50m.txt  test_sender_20250118_142452_4_bytes_50ms.txt  test_sender_20250118_144623_4_bytes_300ms.txt  test_sender_20250118_145945_10_bytes_300ms.txt  test_sender_20250118_151443_16_bytes_300ms.txt  test_sender_20250118_154448_10_bytes_500ms.txt  test_sender_20250118_160324_16_500ms.txt  test_sender_20250122_170516_10_bytes_multiple_senders_500ms.txt  test_sender_algorithm_v2_20250207_173949_10_bytes_based_on_key_idms.txt  (+2 more)
(+288 files in other folders)
